--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.64MB/s(Youtube:不良林), server: 129.226.94.152, port: 56382, type: vmess, uuid: b14dc53a-1505-4909-8f23-2f9391e30d56, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-916.2KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.95MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 塞浦路斯-1.22MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-469.1KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: u4.anmu.one, port: 16199, type: vmess, uuid: 07ec59da-18ad-4224-8ad9-c5a66b1447a9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-525.9KB/s(Youtube:不良林), server: 129.226.215.218, port: 39758, type: vmess, uuid: e1afb696-1e40-4a45-e6de-792c1bd94038, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.95MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇨🇳 中国-746.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-423.4KB/s(Youtube:不良林), server: jp1.v2yyds.cc, port: 32111, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: jp1.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.58MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-1.22MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-916.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 塞浦路斯-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-469.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.58MB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
