--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-1.08MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-487.4KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇫🇷 法国-1.92MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-2.65MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.95MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇯🇵 日本-8.50MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-576.1KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-3.33MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-487.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-513.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-576.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
