--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-2.02MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 乌克兰-450.6KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇸🇬 新加坡-319.2KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 乌克兰-304.6KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-968.1KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.02MB/s(Youtube:不良林)
-      - 乌克兰-450.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 乌克兰-304.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-616.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
